--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+@theme {
+    --font-display: "Jura", "sans-serif"
+}
+
+
